Adjust .co-m-label font size down 1px to prevent descender clipping

--- a/frontend/public/components/utils/_label.scss
+++ b/frontend/public/components/utils/_label.scss
@@ -10,7 +10,7 @@ $height: 18px;
   line-height: $height;
   margin: 1px;
   background-color: $color-grey-background;
-  font-size: $font-size-base;
+  font-size: 12px;
   border: solid 1px $color-grey-border;
 
   &__key, &__value {
